# iot-ml

./: .gitmodules  README.md  pyproject.toml
data/: dashboard.html  script.js
data/20260302_154409/: rx.csv
data/20260302_154721/: rx.csv
data/20260306_103229_archive/: rx.csv
data/20260306_103811_2/: rx.csv
data/20260306_104011_3/: rx.csv
data/20260306_105153_4/: rx.csv
data/20260306_105658_5/: rx.csv
data/20260306_105855_6/: rx.csv
data/20260306_110028_7/: rx.csv
data/20260306_110146_8/: rx.csv
data/20260306_110358_9/: rx.csv
data/20260306_110650_10/: rx.csv
data/20260306_111001_11_0/: rx.csv
data/20260306_111215_12_2/: rx.csv
data/20260306_130207/: rx.csv
data/20260306_130635/: rx.csv
data/20260306_133328/: rx.csv
data/20260306_133349/: rx.csv
data/20260306_135642/: rx.csv
data/20260306_142707/: rx.csv
data/20260306_145847/: rx.csv
data/20260306_155237_bridge1/: rx.csv
data/20260306_173244/: rx.csv
data/20260307_155547/: rx.csv
data/recovered_0306/: f1066378440_1100_1118.csv  f1067102952_1003_1007.csv  f1067114720_1038_1038.csv  f1067115560_1116_1116.csv  f1067115624_1123_1124.csv  f1092432224_1051_1057.csv  f1092618648_1031_1040.csv  f1092634296_1112_1113.csv  f1093265080_1038_1039.csv  (+24 more)
datapreprocess/: dp.ipynb
exp/: readme.md  revise.md
iot/: .gitignore  IOT_COMMUNICATION.md  README.md  log_rx.sh
ml/: .gitignore  README.md  model.py  packet_delay_visu.py  processing.py  readme.md  revise.md  split_data.py  train.py  visualisation.py
resnet/: resnet.ipynb  resnet_identify_env.ipynb  resnet_identify_node.ipynb
(+451 files in other folders)
