[project]
name = "iot-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
ml = [
    "matplotlib>=3.9.0",
    "numpy>=2.2.0",
    "pandas>=2.2.0",
    "pytorch-lightning>=2.6.1",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "scikit-learn>=1.4.0",
    "seaborn>=0.13.0",
]
iot = [
    "adafruit-nrfutil",
    "psutil>=7.2.2",
]
